mise en forme d'un tableau

--- a/test2.html
+++ b/test2.html
@@ -14,8 +14,23 @@
 
 <body>
     <div class="casesizex1 lol">
-    <div class="grid">
-        <div class="casesizex2">lel</div>
+        <div class="grid casesizex08 lol">
+            <div class="casesizex02 lel">lel2</div>
+            <div class="casesizex03 lel">lel5</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+            <div>lel</div>
+        </div>
+        <div>lel</div>
         <div>lel</div>
         <div>lel</div>
         <div>lel</div>
@@ -30,22 +45,199 @@
         <div>lel</div>
         <div>lel</div>
     </div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
-    <div>lel</div>
 
-    </div>
+    <table class="casesizex01">
+        <caption class="tabletitle">tableau 1</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+    <table class="casesizex02">
+        <caption class="tabletitle">tableau 2</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+    <table class="casesizex03">
+        <caption class="tabletitle">tableau 3</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+    <table class="casesizex04">
+        <caption class="tabletitle">tableau 4</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+    <table class="casesizex05">
+        <caption class="tabletitle">tableau 5</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+    <table class="casesizex06">
+        <caption class="tabletitle">tableau 6</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+    <table class="casesizex07">
+        <caption class="tabletitle">tableau 7</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+    <table class="casesizex08">
+        <caption class="tabletitle">tableau 8</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+    <table class="casesizex09">
+        <caption class="tabletitle">tableau 9</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+
+    <table class="casesizex1">
+        <caption class="tabletitle">tableau 10</caption>
+        <tr>
+            <th>Nom</th>
+            <th>Âge</th>
+            <th>Pays</th>
+        </tr>
+
+        <tr>
+            <td>Cloud</td>
+            <td>666 ans</td>
+            <td>Midgar</td>
+        </tr>
+        <tr>
+            <td>Morsay</td>
+            <td>3 ans</td>
+            <td>Cli Cli</td>
+        </tr>
+    </table>
+
 </body>
 
 </html>
