modification au position déjà existante et création d'un cube d'exemple

--- a/test2.html
+++ b/test2.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="test.css">
 </head>
-
 <body>
     <div class="casesizex1 lol">
         <div class="grid casesizex08 lol">
@@ -33,19 +32,18 @@
         <div>lel</div>
         <div>lel</div>
         <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
     </div>
-
+    <div class="cube">
+        <div class="top lol casesizex01">lel</div>
+        <div class="bottom lol casesizex01">lel</div>
+        <div class="left lol casesizex01">lel</div>
+        <div class="right lol casesizex01">lel</div>
+        <div class="middle lol casesizex01">lel</div>
+        <div class="topleft lol casesizex01">lel</div>
+        <div class="topright lol casesizex01">lel</div>
+        <div class="bottomright lol casesizex01">lel</div>
+        <div class="bottomleft lol casesizex01">lel</div>
+    </div>
     <table class="casesizex01">
         <caption class="tabletitle">tableau 1</caption>
         <tr>
@@ -237,7 +235,6 @@
             <td>Cli Cli</td>
         </tr>
     </table>
-
 </body>
 
 </html>
