--- a/testmenu.html
+++ b/testmenu.html
@@ -15,6 +15,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
 
+    <p class="menu"><a href="#">m</a></p>
     <ul class="menu">
     	<li><a href="#">Lien menu 1</a>
     		<ul>
