ajout de certaines choses (lolilol TRO SWAGGY)

--- a/test2.html
+++ b/test2.html
@@ -11,29 +11,47 @@
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="test.css">
 </head>
+
 <body>
-    <div class="casesizex1 lol">
-        <div class="grid casesizex08 lol">
-            <div class="casesizex02 lel">lel2</div>
-            <div class="casesizex03 lel">lel5</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
-            <div>lel</div>
+    <div class="casesizex1 lol maxcontentsize05">
+        <div class="grid casesizex08 ololbackground1">
+            <div class="maxcontentsize01 lel">lel2</div>
+            <div class="maxcontentsize02 lel">lel5</div>
+            <div class="maxcontentsize03 lel">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize05 lel">lel</div>
+            <div class="maxcontentsize06 lel">lel</div>
+            <div class="maxcontentsize07 lel">lel</div>
+            <div class="maxcontentsize08 lel">lel</div>
+            <div class="maxcontentsize09 lel">lel</div>
+            <div class="maxcontentsize1 lel">lel</div>
+            <div class="maxcontentsize09 lel">lel</div>
+            <div class="maxcontentsize08 lel">lel</div>
+            <div class="maxcontentsize07 lel">lel</div>
+            <div class="maxcontentsize06 lel">lel</div>
+            <div class="maxcontentsize05 lel">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize03 lel">lel</div>
+            <div class="maxcontentsize02 lel">lel</div>
+            <div class="maxcontentsize01 lel">lel</div>
         </div>
-        <div>lel</div>
-        <div>lel</div>
-        <div>lel</div>
+        <div class="maxcontentsize03 ololbackground1">lel</div>
+        <div class="maxcontentsize04 lel">lel</div>
+        <div class="maxcontentsize04 lel">lel</div>
+        <div class="maxcontentsize04 lel">lel</div>
+        <div class="maxcontentsize04 lel">lel</div>
+        <div class="maxcontentsize05 lel">lel</div>
+        <div class="maxcontentsize06 lel">lel</div>
+        <div class="maxcontentsize05 lel">lel</div>
+        <div class="maxcontentsize04 lel">lel</div>
+        <div class="maxcontentsize04 lel">lel</div>
+        <div class="maxcontentsize04 lel">lel</div>
+        <div class="maxcontentsize04 lel">lel</div>
+        <div class="maxcontentsize03 lel">lel</div>
     </div>
-    <div class="cube">
+
+
+    <div class="cube resizefromuser ololbackground2">
         <div class="top lol casesizex01">lel</div>
         <div class="bottom lol casesizex01">lel</div>
         <div class="left lol casesizex01">lel</div>
