menu responsive qui fonctionne mais css à nettoyer

--- a/testmenu.html
+++ b/testmenu.html
@@ -6,33 +6,40 @@
   </head>
 
   <body>
-    <ul class="menu">
-      <li><a href="#">Accueil</a></li>
-      <li><a href="#">À propos</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Accueil</a></li>
-      <li><a href="#">À propos</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+    <nav class="menu">
+      <p><a href="#">m</a></p>
+      <ul class="menu">
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">À propos</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">À propos</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
 
-    <p class="menu"><a href="#">m</a></p>
-    <ul class="menu">
-    	<li><a href="#">Lien menu 1</a>
-    		<ul>
-    			<li><a href="#">lien sous menu 1</a></li>
-    			<li><a href="#">lien sous menu 1</a></li>
-    			<li><a href="#">lien sous menu 1</a></li>
-    			<li><a href="#">lien sous menu 1</a></li>
-    		</ul>
-    	</li><!--
-   --><li><a href="#">Lien menu 2</a>
-    		<ul>
-    			<li><a href="#">Lien sous menu 2</a></li>
-    			<li><a href="#">Lien sous menu 2</a></li>
-    			<li><a href="#">Lien sous menu 2</a></li>
-    			<li><a href="#">Lien sous menu 2</a></li>
-    		</ul>
-    	</li>
-    </ul>
+    <p></p>
+
+    <nav class="menu">
+      <p><a href="#">m</a></p>
+      <ul class="menu">
+      	<li><a href="#">Lien menu 1</a>
+      		<ul>
+      			<li><a href="#">lien sous menu 1</a></li>
+      			<li><a href="#">lien sous menu 1</a></li>
+      			<li><a href="#">lien sous menu 1</a></li>
+      			<li><a href="#">lien sous menu 1</a></li>
+      		</ul>
+      	</li><!--
+     --><li><a href="#">Lien menu 2</a>
+      		<ul>
+      			<li><a href="#">Lien sous menu 2</a></li>
+      			<li><a href="#">Lien sous menu 2</a></li>
+      			<li><a href="#">Lien sous menu 2</a></li>
+      			<li><a href="#">Lien sous menu 2</a></li>
+      		</ul>
+      	</li>
+      </ul>
+    </nav>
   </body>
 </html>
