--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CSS Framework - PRESENTATION</title>
         <link rel="stylesheet" href="AcSS/reset.css">
+        <link rel="stylesheet" href="AcSS/normalize.css">
         <link rel="stylesheet" href="AcSS/nav.css">
         <link rel="stylesheet" href="AcSS/grid.css">
         <link rel="stylesheet" href="AcSS/utils.css">
@@ -18,155 +19,157 @@
                 <h1>Présentation du framework CSS</h1>
             </header>
 
-            <main>
-            <article>
-                <h2>Règles de reset.css</h2>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            <div id="wrapper-main">
+                <main>
+                <article>
+                    <h2>Règles de reset.css</h2>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                        <div style="background-color:blue">
-                            Salut
+                    </section>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                    </div>
-                </section>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                    </section>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                        <div style="background-color:blue">
-                            Salut
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-                        </div>
-                        <div style="background-color:blue">
-                            Salut
-                        </div>
-                    </div>
-                </section>
-            </article>
+                    </section>
+                </article>
 
-            <article>
-                <h2>Règles de grid.css</h2>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                <article>
+                    <h2>Règles de grid.css</h2>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                        <div style="background-color:blue">
-                            Salut
+                    </section>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                    </div>
-                </section>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                    </section>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                        <div style="background-color:blue">
-                            Salut
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-                        </div>
-                        <div style="background-color:blue">
-                            Salut
-                        </div>
-                    </div>
-                </section>
-            </article>
+                    </section>
+                </article>
 
-            <article>
-                <h2>Règles de nav.css</h2>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                <article>
+                    <h2>Règles de nav.css</h2>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                        <div style="background-color:blue">
-                            Salut
+                    </section>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                    </div>
-                </section>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                    </section>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                        <div style="background-color:blue">
-                            Salut
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-                        </div>
-                        <div style="background-color:blue">
-                            Salut
-                        </div>
-                    </div>
-                </section>
-            </article>
+                    </section>
+                </article>
 
-            <article>
-                <h2>Règles de utils.css</h2>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                <article>
+                    <h2>Règles de utils.css</h2>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                        <div style="background-color:blue">
-                            Salut
+                    </section>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                    </div>
-                </section>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                    </section>
+                    <section>
+                        <h3>Titre</h3>
+                        <div class="rule-container">
+                            <div style="background-color:red">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                            </div>
+                            <div style="background-color:blue">
+                                Salut
+                            </div>
                         </div>
-                        <div style="background-color:blue">
-                            Salut
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <h3>Titre</h3>
-                    <div class="rule-container">
-                        <div style="background-color:red">
-                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-                        </div>
-                        <div style="background-color:blue">
-                            Salut
-                        </div>
-                    </div>
-                </section>
-            </article>
-            </main>
+                    </section>
+                </article>
+                </main>
+            </div>
 
             <footer>
                 <h2>
