precised titles for PADDINGTOP

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <section>
                         <h3>Padding Top</h3>
                         <div class="rules-container">
-                            <h4>PADDINGTOP</h4>
+                            <h4>PADDINGTOP1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -155,7 +155,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGTOP</h4>
+                            <h4>PADDINGTOP2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -164,7 +164,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGTOP</h4>
+                            <h4>PADDINGTOP3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -173,7 +173,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGTOP</h4>
+                            <h4>PADDINGTOP4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -182,7 +182,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGTOP</h4>
+                            <h4>PADDINGTOP5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -191,7 +191,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGTOP</h4>
+                            <h4>PADDINGTOP10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -200,7 +200,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGTOP</h4>
+                            <h4>PADDINGTOP15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -209,7 +209,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGTOP</h4>
+                            <h4>PADDINGTOP20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -218,7 +218,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGTOP</h4>
+                            <h4>PADDINGTOP25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
