precised titles for PADDINGRIGHT

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <section>
                         <h3>Padding Right</h3>
                         <div class="rules-container">
-                            <h4>PADDINGRIGHT</h4>
+                            <h4>PADDINGRIGHT1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -241,7 +241,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGRIGHT</h4>
+                            <h4>PADDINGRIGHT2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -250,7 +250,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGRIGHT</h4>
+                            <h4>PADDINGRIGHT3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -259,7 +259,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGRIGHT</h4>
+                            <h4>PADDINGRIGHT4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -268,7 +268,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGRIGHT</h4>
+                            <h4>PADDINGRIGHT5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -277,7 +277,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGRIGHT</h4>
+                            <h4>PADDINGRIGHT10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -286,7 +286,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGRIGHT</h4>
+                            <h4>PADDINGRIGHT15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -295,7 +295,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGRIGHT</h4>
+                            <h4>PADDINGRIGHT20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -304,7 +304,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGRIGHT</h4>
+                            <h4>PADDINGRIGHT25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
